@@ -13,8 +13,13 @@ WISH: anyevent mouse notification / manage MotionMask better.
 WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
 DUMB: support tex fonts
 
+	- use double-buffered drawing for xft fonts only. On many driver/hardware
+          combination this actually increases xft drawing speed, at the expense
+          of more network bandwidth and slight nausea on the side of the author.
 	- readline perl extension now requires shift-click instead of a normal
           click.
+        - disabled graphics-exposures on the main drawing GC, report any
+          refresh bugs please.
 	- improve property handling for -pe tabbed: avoid unnecessary property
           changes (for kde's benefit) at the expense of extra round-trips,
           improve size hint setting.
